@@ -23,7 +23,7 @@ import com.netflix.astyanax.annotations.Component;
 import com.netflix.astyanax.model.Composite;
 
 public class SerializersTest {
-    private static Logger LOG = LoggerFactory.getLogger(SerializersTest.class);
+    private static Logger log = LoggerFactory.getLogger(SerializersTest.class);
 
     private static BytesArraySerializer hexSerializer = new BytesArraySerializer();
 
@@ -80,16 +80,17 @@ public class SerializersTest {
         }
         @Override
         public boolean equals(Object c2) {
-            if (!(c2 instanceof LongLong)) return false;
-            if (this.comp1 == ((LongLong)c2).comp1 && this.comp2 == ((LongLong)c2).comp2) return true;
-            return false;
+            if (!(c2 instanceof LongLong)) {
+                return false;
+            }
+            return this.comp1 == ((LongLong) c2).comp1 && this.comp2 == ((LongLong) c2).comp2;
         }
     };
     @Test
     public void testMultiLongsComposite() {
     try {
             
-            AnnotatedCompositeSerializer<LongLong> ser = new AnnotatedCompositeSerializer<LongLong>(LongLong.class);
+            AnnotatedCompositeSerializer<LongLong> ser = new AnnotatedCompositeSerializer<>(LongLong.class);
             LongLong comp = new LongLong(1L, 2L);
             ByteBuffer bb = ser.toByteBuffer(comp);
             LongLong comp2 = ser.fromByteBuffer(bb);
@@ -122,13 +123,13 @@ public class SerializersTest {
 
         BigInteger bi1 = new BigInteger("127");
         ByteBuffer bb1 = ser.toByteBuffer(bi1);
-        BigInteger bi1_verify = ser.fromByteBuffer(bb1);
-        ByteBuffer bb1_str = ser.fromString("127");
+        BigInteger bi1Verify = ser.fromByteBuffer(bb1);
+        ByteBuffer bb1Str = ser.fromString("127");
         ByteBuffer bb2 = ser.getNext(bb1);
         BigInteger bi2 = ser.fromByteBuffer(bb2);
 
-        Assert.assertEquals(bi1, bi1_verify);
-        Assert.assertEquals(bb1, bb1_str);
+        Assert.assertEquals(bi1, bi1Verify);
+        Assert.assertEquals(bb1, bb1Str);
         Assert.assertEquals(1, bi2.intValue() - bi1.intValue());
         Assert.assertEquals(bb2.capacity(), bb1.capacity() + 1);
     }
@@ -143,14 +144,14 @@ public class SerializersTest {
     @Test
     public void testBooleanSerializer() {
         BooleanSerializer ser = new BooleanSerializer();
-        Boolean value = new Boolean(true);
+        Boolean value = Boolean.valueOf(true);
         testSerializer(ser, value);
     }
     
     @Test
     public void testBooleanSerializerIdempotent() {
         BooleanSerializer ser = new BooleanSerializer();
-        Boolean value = new Boolean(true);
+        Boolean value = Boolean.valueOf(true);
         testSerializerIdempotent(ser, value);
     }
 
@@ -183,7 +184,7 @@ public class SerializersTest {
 
         String str2 = ser.fromByteBuffer(compressed);
         Assert.assertEquals(str, str2);
-        LOG.info(String.format("Compressed at ratio: %2f",
+        log.info(String.format("Compressed at ratio: %2f",
                 (double) (origLength - compLength) / (double) origLength));
     }
 
@@ -201,7 +202,7 @@ public class SerializersTest {
 
         String str2 = ser.fromByteBuffer(compressed);
         Assert.assertEquals(str, str2);
-        LOG.info(String.format("Compressed at ratio: %2f",
+        log.info(String.format("Compressed at ratio: %2f",
                 (double) (origLength - compLength) / (double) origLength));
     }
 
@@ -213,14 +214,14 @@ public class SerializersTest {
     @Test
     public void testCharSerializer() {
         CharSerializer ser = new CharSerializer();
-        Character value = new Character('A');
+        Character value = Character.valueOf('A');
         testSerializer(ser, value);
     }
     
     @Test
     public void testCharSerializerIdempotent() {
         CharSerializer ser = new CharSerializer();
-        Character value = new Character('A');
+        Character value = Character.valueOf('A');
         testSerializerIdempotent(ser, value);
     }
 
@@ -244,12 +245,12 @@ public class SerializersTest {
 
         Double d1 = 127.0;
         ByteBuffer bb1 = ser.toByteBuffer(d1);
-        Double d1_verify = ser.fromByteBuffer(bb1.duplicate());
+        Double d1Verify = ser.fromByteBuffer(bb1.duplicate());
         ByteBuffer bb1_str = ser.fromString("127");
         ByteBuffer bb2 = ser.getNext(bb1);
         Double d2 = ser.fromByteBuffer(bb2.duplicate());
 
-        Assert.assertEquals(d1, d1_verify);
+        Assert.assertEquals(d1, d1Verify);
         Assert.assertEquals(bb1, bb1_str);
         Assert.assertEquals(d1 + Double.MIN_VALUE, d2);
         Assert.assertEquals(bb2.capacity(), bb1.capacity());
@@ -259,7 +260,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     
@@ -276,12 +277,12 @@ public class SerializersTest {
 
         Float f1 = (float) 127.0;
         ByteBuffer bb1 = ser.toByteBuffer(f1);
-        Float f1_verify = ser.fromByteBuffer(bb1.duplicate());
+        Float f1Verify = ser.fromByteBuffer(bb1.duplicate());
         ByteBuffer bb1_str = ser.fromString("127");
         ByteBuffer bb2 = ser.getNext(bb1);
         Float f2 = ser.fromByteBuffer(bb2.duplicate());
 
-        Assert.assertEquals(f1, f1_verify);
+        Assert.assertEquals(f1, f1Verify);
         Assert.assertEquals(bb1, bb1_str);
         Assert.assertEquals(f1 + Float.MIN_VALUE, f2);
         Assert.assertEquals(bb2.capacity(), bb1.capacity());
@@ -291,7 +292,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     
@@ -323,7 +324,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     
@@ -340,12 +341,12 @@ public class SerializersTest {
 
         Long val1 = (long) 127;
         ByteBuffer bb1 = ser.toByteBuffer(val1);
-        Long val1_verify = ser.fromByteBuffer(bb1.duplicate());
+        Long val1Verify = ser.fromByteBuffer(bb1.duplicate());
         ByteBuffer bb1_str = ser.fromString("127");
         ByteBuffer bb2 = ser.getNext(bb1);
         Long val2 = ser.fromByteBuffer(bb2.duplicate());
 
-        Assert.assertEquals(val1, val1_verify);
+        Assert.assertEquals(val1, val1Verify);
         Assert.assertEquals(bb1, bb1_str);
         Assert.assertEquals(1, val2.intValue() - val1.intValue());
         Assert.assertEquals(bb2.capacity(), bb1.capacity());
@@ -355,7 +356,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     
@@ -387,7 +388,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     @Test
@@ -418,7 +419,7 @@ public class SerializersTest {
             ser.getNext(bbMax);
             Assert.fail();
         } catch (Exception e) {
-            LOG.info(e.getMessage());
+            log.info(e.getMessage());
         }
     }
     
@@ -511,21 +512,21 @@ public class SerializersTest {
                 return false;
             }
             Composite1 other = (Composite1) arg0;
-            return (String.valueOf(firstName).equals(
+            return String.valueOf(firstName).equals(
                     String.valueOf(other.firstName))
                     && String.valueOf(lastName).equals(
                             String.valueOf(other.lastName))
                     && String.valueOf(decimal).equals(
                             String.valueOf(other.decimal))
                     && String.valueOf(integer).equals(
-                            String.valueOf(other.integer)) && age == other.age);
+                            String.valueOf(other.integer)) && age == other.age;
         }
     }
 
     @Test
     public void testAnnotatedCompositeSerializer() {
         try {
-            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<Composite1>(
+            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<>(
                     Composite1.class);
 
             Composite1 c1 = new Composite1("Arielle", "Landau", 6,
@@ -535,7 +536,7 @@ public class SerializersTest {
             Composite1 c2 = ser.fromByteBuffer(bytes);
             Assert.assertEquals(c1, c2);
         } catch (Exception e) {
-            LOG.error(e.getMessage());
+            log.error(e.getMessage());
             Assert.fail();
         }
     }
@@ -543,7 +544,7 @@ public class SerializersTest {
     @Test
     public void testAnnotatedCompositeSerializerIdempotent() {
         try {
-            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<Composite1>(
+            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<>(
                     Composite1.class);
 
             Composite1 c1 = new Composite1("Arielle", "Landau", 6,
@@ -551,14 +552,14 @@ public class SerializersTest {
 
            testSerializerIdempotent(ser, c1);
         } catch (Exception e) {
-            LOG.error(e.getMessage());
+            log.error(e.getMessage());
             Assert.fail();
         }
     }
 
     @Test
     public void testStressAnnotatedCompositeSerializer() throws Exception {
-        AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<Composite1>(
+        AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<>(
                 Composite1.class);
 
         int count = 10000;
@@ -566,7 +567,8 @@ public class SerializersTest {
         Composite1 c1 = new Composite1("Arielle", "Landau", 6, new BigInteger(
                 "1"), new BigDecimal(2));
 
-        long startTime, runTime;
+        long startTime;
+        long runTime;
 
         for (int j = 0; j < 3; j++) {
             System.out.println("-----");
@@ -638,7 +640,7 @@ public class SerializersTest {
     @Test
     public void testAnnotatedCompositeSerializerWithNulls() {
         try {
-            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<Composite1>(
+            AnnotatedCompositeSerializer<Composite1> ser = new AnnotatedCompositeSerializer<>(
                     Composite1.class);
 
             Composite1 c1 = new Composite1("Arielle", null, null, null, null);
@@ -648,7 +650,7 @@ public class SerializersTest {
             Assert.assertEquals(c1, c2);
         } catch (Exception e) {
             e.printStackTrace();
-            LOG.error(e.getMessage());
+            log.error(e.getMessage());
             Assert.fail();
         }
     }
@@ -685,14 +687,14 @@ public class SerializersTest {
                 return false;
             }
             Composite2 other = (Composite2) arg0;
-            return (firstName.equals(other.firstName)
-                    && lastName.equals(other.lastName) && age == other.age);
+            return firstName.equals(other.firstName)
+                    && lastName.equals(other.lastName) && age == other.age;
         }
     }
 
     @Test
     public void testAnnotatedCompositeSerializerWithOrdinal() {
-        AnnotatedCompositeSerializer<Composite2> ser = new AnnotatedCompositeSerializer<Composite2>(
+        AnnotatedCompositeSerializer<Composite2> ser = new AnnotatedCompositeSerializer<>(
                 Composite2.class);
 
         try {
@@ -704,7 +706,7 @@ public class SerializersTest {
             Assert.assertEquals(c1, c2);
             Assert.assertEquals(c2, c3);
         } catch (Exception e) {
-            LOG.error(e.getMessage());
+            log.error(e.getMessage());
             Assert.fail();
         }
     }
@@ -726,7 +728,7 @@ public class SerializersTest {
             }
         } catch (Exception e) {
             Assert.fail();
-            LOG.error(e.getMessage());
+            log.error(e.getMessage());
         }
     }
 
